--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "csv-parse": "^6.1.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
@@ -53,6 +54,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^5.12.2",
+    "pdf-parse": "^1.1.1",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -70,6 +72,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
