fix: Resolve file size limit issues and improve upload handling
- Reduce file size limit from 500MB to 100MB for serverless compatibility
- Add client-side file size validation to prevent large file uploads
- Update error messages to provide clear guidance on file size limits
- Add file size limit notes to UI for better user experience
- Implement chunked upload API route for future large file support
- Add CORS headers to vercel.json for better upload handling
- Improve error handling for 413 Payload Too Large responses
- Add helpful suggestions for users with large files

This resolves the 413 error by preventing files larger than 100MB
from being uploaded and provides clear guidance to users.

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,24 @@
     "app/api/sales-analyst/blob-transcribe/route.ts": {
       "maxDuration": 300
     }
-  }
+  },
+  "headers": [
+    {
+      "source": "/api/sales-analyst/blob-upload",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "POST, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type"
+        }
+      ]
+    }
+  ]
 }
