Fix Next.js routing conflict and add comprehensive features - Resolve test-auth page/route conflict by moving API to /api/test-auth - Add HR agent functionality with candidate management - Implement sales analyst improvements and content hash deduplication - Add scale expert agent with PDF processing and transcription - Update database schema and authentication system - Add comprehensive documentation and setup guides

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,21 @@
     },
     "app/api/sales-analyst/blob-transcribe/route.ts": {
       "maxDuration": 300
+    },
+    "app/api/scale-expert/blob-upload/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/scale-expert/blob-transcribe/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/scale-expert/delete-blob/route.ts": {
+      "maxDuration": 30
+    },
+    "app/api/hr-agent/blob-upload/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/hr-agent/blob-upload-zip/route.ts": {
+      "maxDuration": 300
     }
   }
 }
