--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.10.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^5.12.2",
+    "pdf2json": "^3.2.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -70,7 +73,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
