--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm run build",
+  "buildCommand": "git lfs pull && pnpm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "pnpm install",
