feat: implement Vercel Edge Function for Python PDF parsing
- Add new Edge Function API route for PDF parsing with Python support
- Update python-pdf-utils.ts to use Edge Function in Vercel production
- Configure vercel.json for Edge Runtime with 60s timeout
- Implement graceful fallback to JavaScript PDF parser
- Fix TypeScript compatibility issues with Buffer/Blob conversion
- Support both buffer and URL-based PDF parsing in Edge Function

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,10 @@
     },
     "app/api/hr-agent/blob-upload-zip/route.ts": {
       "maxDuration": 300
+    },
+    "app/api/pdf-parser-python/route.ts": {
+      "runtime": "edge",
+      "maxDuration": 60
     }
   }
 }
