--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
     },
     "app/api/pdf-parser-python/route.ts": {
       "maxDuration": 60
+    },
+    "api/pdf-parser-python.py": {
+      "runtime": "python3.9",
+      "maxDuration": 60
     }
   }
 }
