--- a/vercel.json
+++ b/vercel.json
@@ -29,7 +29,7 @@
       "maxDuration": 60
     },
     "api/pdf-parser-python.py": {
-      "runtime": "python3.9",
+      "runtime": "vercel-python@3.12",
       "maxDuration": 60
     }
   }
