--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.54.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
